--- a/cuan.htm
+++ b/cuan.htm
@@ -23,7 +23,7 @@
     </header>
     <section class="w clearfix">
         <dl>
-            <dt><a href="index.html">首页</a></dt>
+            <dt><a href="index.htm">首页</a></dt>
         </dl>
         <dl>
             <dt><a href="#">美食</a></dt>
@@ -66,13 +66,14 @@
         <div class="hd">
             <div class="pic1"></div>
             <div class="pic2"></div>
-            <p> 红头船是从潮汕地区开始起航驶向世界的，是广东潮汕人的一个重要的象征。红头船曾经是中国同世界各地经济和文化交流的纽带，也是各地华侨同祖国联系的纽带。潮汕地区是红头船的故乡和始发地，大多数潮汕先辈为了生存和梦想，驾着红头船远渡重洋。<br>
-                从红头船身上，可以读到潮汕人勇立潮头、敢闯敢拼的英勇气概。“穷则变，变则通”，如果说第一代乘坐红头船到海外谋生创业的先人是迫于生计，那么他们在追逐梦想的过程中，所形成的挺立潮头、蹈海弄潮、不惧艰险、敢为人先的行事习惯，无疑已升华为一种精神力量，成为红头船精神的重要内核。
+            <p>
+                “红头船”是潮汕地区华侨华人远渡重洋拓殖海外的远洋商船，是联通古代海上丝绸之路的重要纽带指清代潮州与南洋(东南亚一带)航运远洋船队所用帆船，这些船因船头油刷朱红色而得名。昔日潮汕人乘坐红头船远渡重洋，到海外谋生，在陌生的国度繁衍生息，艰苦创业。今日它承载着满满思乡情，成为华侨同祖国联系的亲情纽带。潮汕历代原称潮州，故潮汕红头船也称潮州红头船。
             </p>
+
         </div>
         <div class="bd">
             <p>
-                “红头船”是潮汕地区华侨华人远渡重洋拓殖海外的远洋商船，是联通古代海上丝绸之路的重要纽带指清代潮州与南洋(东南亚一带)航运远洋船队所用帆船，这些船因船头油刷朱红色而得名。昔日潮汕人乘坐红头船远渡重洋，到海外谋生，在陌生的国度繁衍生息，艰苦创业。今日它承载着满满思乡情，成为华侨同祖国联系的亲情纽带。潮汕历代原称潮州，故潮汕红头船也称潮州红头船。</strong>。
+                从红头船身上，可以读到潮汕人勇立潮头、敢闯敢拼的英勇气概。“穷则变，变则通”，如果说第一代乘坐红头船到海外谋生创业的先人是迫于生计，那么他们在追逐梦想的过程中，所形成的挺立潮头、蹈海弄潮、不惧艰险、敢为人先的行事习惯，无疑已升华为一种精神力量，成为红头船精神的重要内核。
             </p>
             <div class="pic1"></div>
             <div class="pic2"></div>
