--- a/nanao.htm
+++ b/nanao.htm
@@ -31,10 +31,10 @@
         }
 
         .nanao p {
-            width: 400px;
+            width: 520px;
             position: absolute;
-            top: 50px;
-            right: 360px;
+            top: 30px;
+            right: 260px;
             z-index: 999;
             font-size: 18px;
             color: #000;
@@ -84,7 +84,7 @@
     </header>
     <section class="w clearfix">
         <dl>
-            <dt><a href="index.html">首页</a></dt>
+            <dt><a href="index.htm">首页</a></dt>
         </dl>
         <dl>
             <dt><a href="#">美食</a></dt>
@@ -126,7 +126,7 @@
     <div class="nanao w">
         <img src="images/南澳2.jpg" alt="">
         <img src="images/南澳4.jpg" class="leftImg">
-        <p>南澳岛是广东省唯一的海岛县，她是由37个大小岛屿所组成，陆地面积130.90平方公里（其中主岛面积128.35平方公里），海域面积4600平方公里，现有7万多常住人口。
+        <p>南澳岛是广东省唯一的海岛县，由37个大小岛屿所组成，陆地面积130.90平方公里（其中主岛面积128.35平方公里），海域面积4600平方公里。
             南澳岛地处粤东海面，位于高雄——厦门——香港三大港口的中心点，濒临西太平洋国际主航线。<br>
             南澳岛地处亚热带，北回归线横贯。冬暖夏凉的海洋性气候十分宜人，年平均气温只有21．5℃，且空气清新，没有各类污染工业，每立方厘米空气含负离子4000个，高于一般城市10至20倍。盛夏季节，海风习习，气候清爽，是避暑消夏的好地方。每逢夏季，国内外旅游者纷纷来到这里避暑、休憩、游览、消夏。南澳岛素有“粤东海上明珠”之称，旅游资源十分丰富，有“海、山、史、庙”文体交叉的特色。
         </p>
