--- a/yingge.htm
+++ b/yingge.htm
@@ -32,7 +32,8 @@
             left: 30px;
             z-index: 999;
             font-size: 20px;
-            color: #fff;
+            line-height: 35px;
+            color: #ffe;
         }
 
         .yingge .topImg {
@@ -76,7 +77,7 @@
     </header>
     <section class="w clearfix">
         <dl>
-            <dt><a href="index.html">首页</a></dt>
+            <dt><a href="index.htm">首页</a></dt>
         </dl>
         <dl>
             <dt><a href="#">美食</a></dt>
