--- a/jylou.htm
+++ b/jylou.htm
@@ -28,7 +28,7 @@
         .jylou p {
             width: 450px;
             position: absolute;
-            top: 66px;
+            top: 49px;
             left: 30px;
             z-index: 999;
             font-size: 20px;
@@ -64,7 +64,7 @@
     </header>
     <section class="w clearfix">
         <dl>
-            <dt><a href="index.html">首页</a></dt>
+            <dt><a href="index.htm">首页</a></dt>
         </dl>
         <dl>
             <dt><a href="#">美食</a></dt>
