--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>潮汕旅行攻略</title>
     <!-- 引入小logo -->
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 </head>
 
@@ -25,7 +25,7 @@
     </header>
     <section class="w clearfix">
         <dl>
-            <dt><a href="index.htm">首页</a></dt>
+            <dt><a href="index.html">首页</a></dt>
         </dl>
         <dl>
             <dt><a href="#">美食</a></dt>
@@ -111,7 +111,7 @@
         </div>
     </div>
     <!-- 潮州+揭阳 -->
-    <div class="city w">
+    <div class="city w clearfix">
         <div class="cz">
             <div class="cz-text">
                 <h3>潮州</h3>
